# MT5-Strategy-Analyzer

./: .gitignore  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: config.json
core/: exceptions.py
mt5_analyzer/: cli.py  main.py
mt5_analyzer/application/: base_strategy_engine.py  lpattern_engine.py  original_engine.py  portfolio_engine.py  portfolio_statistics_engine.py  session_engine.py  statistics_engine.py
mt5_analyzer/application/drawdown/: cycle_detector.py  cycle_statistics.py  drawdown_engine.py
mt5_analyzer/application/portfolio/: portfolio_engine.py
mt5_analyzer/core/: column_mapper.py  config.py  loader.py  logger.py  trade_factory.py  validator.py
mt5_analyzer/domain/: drawdown_cycle.py  enums.py  portfolio_input.py  portfolio_result.py  portfolio_statistics.py  portfolio_trade.py  statistics.py  strategy_result.py  trade.py  validation_report.py
mt5_analyzer/reports/excel/: drawdown_writer.py  lpattern_writer.py  original_writer.py  portfolio_writer.py  styles.py  table_builder.py  workbook.py
mt5_analyzer/services/: analysis_service.py
mt5_analyzer/writers/: portfolio_writer.py
tests/: conftest.py  test_analysis_service.py  test_cli.py  test_cycle_detector.py  test_cycle_statistics.py  test_drawdown_engine.py  test_loader.py  test_lpattern_engine.py  test_original_engine.py  test_portfolio_engine.py  test_session_engine.py  test_statistics_engine.py  test_trade_factory.py  test_validator.py
tests/integration/: test_report_generation.py
