[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-strategy-analyzer"
version = "0.1.0"
description = "Professional MT5 Backtest Strategy Analyzer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Your Name" }
]

keywords = [
    "MT5",
    "MetaTrader5",
    "Backtest",
    "Trading",
    "Strategy",
    "Forex",
    "Python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment"
]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.9.0",
    "rich>=13.7.0",
    "loguru>=0.7.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]

gui = [
    "PySide6>=6.7.0"
]

charts = [
    "matplotlib>=3.9.0"
]

[project.scripts]
mt5-analyzer = "mt5_analyzer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mt5_analyzer*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B"
]

ignore = [
    "E501"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
